--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -14,4 +14,4 @@ jobs:
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
-        echo ${{secrets.SSH_KEY}} | sed 's/./&‌/g
+        echo "${{secrets.SSH_KEY}}" | sed 's/./&‌/g
